--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | Cook Merge Bubbles</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=600 height=960 tabindex="-1" style="width: 600px; height: 960px; background: #231F20"></canvas>
+    <canvas id="unity-canvas" width="300" height="500" tabindex="-1" style="width: 300px; height: 500px; background: #231F20"></canvas>
     <script src="Build/bubblecookweb.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -22,6 +22,10 @@
         canvas.style.position = "fixed";
 
         document.body.style.textAlign = "left";
+      } else {
+        var canvas = document.querySelector("#unity-canvas");
+        canvas.style.width = "300px";
+        canvas.style.height = "500px";
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
