add webApp script

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </div>
     </div>
     <script src="Build/bubblecookweb.loader.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
