--- a/index.html
+++ b/index.html
@@ -116,30 +116,31 @@
     document.body.appendChild(script);
 
     // API call function
-    function registerUser(telegramId, username, referralCode) {
-      fetch('https://localhost:51937/api/users', {
-        method: 'POST',
-        headers: {
-          'accept': '*/*',
-          'X-Api-Key': '433490a8-6d4b-4868-bbed-b48468b7085e',
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          telegramId: telegramId,
-          username: username,
-          referralCode: referralCode
-        })
-      }).then(response => {
-        if (!response.ok) {
-          throw new Error('Network response was not ok');
-        }
-        return response.json();
-      }).then(data => {
-        console.log('User registered:', data);
-      }).catch(error => {
-        console.error('There was a problem with the fetch operation:', error);
-      });
+function registerUser(telegramId, username, referralCode) {
+  fetch(`https://cors-anywhere.herokuapp.com/https://localhost:51937/api/users`, {
+    method: 'POST',
+    headers: {
+      'accept': '*/*',
+      'X-Api-Key': '433490a8-6d4b-4868-bbed-b48468b7085e',
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({
+      telegramId: telegramId,
+      username: username,
+      referralCode: referralCode
+    })
+  }).then(response => {
+    if (!response.ok) {
+      throw new Error('Network response was not ok');
     }
+    return response.json();
+  }).then(data => {
+    console.log('User registered:', data);
+  }).catch(error => {
+    console.error('There was a problem with the fetch operation:', error);
+  });
+}
+
 
     // Obtain Telegram Web App data
     window.Telegram.WebApp.ready();
