--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     // API call function
 function registerUser(telegramId, username, referralCode) {
-  fetch(`https://cors-anywhere.herokuapp.com/https://localhost:51937/api/users`, {
+  fetch(`https://localhost:51937/api/users`, {
     method: 'POST',
     headers: {
       'accept': '*/*',
