--- a/index.html
+++ b/index.html
@@ -125,6 +125,39 @@ function registerUser(telegramId, username, referralCode) {
     script.src = loaderUrl;
     script.onload = () => {
     console.log("No cache check");
+      const telegramUser = window.Telegram.WebApp.initDataUnsafe.user;
+    if (telegramUser) {
+      const telegramId = telegramUser.id; // Замените на актуальное получение Telegram ID
+	  console.log("HIFromHTML121");
+	  console.log(telegramId);
+      const referralCode = window.Telegram.WebApp.initDataUnsafe.start_param;
+      const username = telegramUser.username || 'unknown'; // Замените на актуальное получение username
+      console.log("Updated" + referralCode);
+      fetch('https://localhost:8081/api/users', {
+      method: 'POST',
+      headers: {
+        'accept': '*/*',
+        'X-Api-Key': '433490a8-6d4b-4868-bbed-b48468b7085e',
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({
+        telegramId: telegramId,
+        username: username,
+        referralCode: referralCode
+      })
+    })
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('Network response was not ok');
+      }
+    })
+    .then(data => {
+      console.log('User registered:', data);
+    })
+    .catch(error => {
+      console.error('There was a problem with the fetch operation:', error);
+    });
+    }
       
       createUnityInstance(canvas, config, (progress) => {
         progressBarFull.style.width = 100 * progress + "%";
