feat: unigram payment test

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
       createUnityInstance(canvas, config, (progress) => {
         progressBarFull.style.width = 100 * progress + "%";
       }).then((unityInstance) => {
+        window.UNITY_INSTANCE = unityInstance;
         loadingBar.style.display = "none";
         fullscreenButton.onclick = () => {
           unityInstance.SetFullscreen(1);
