feat: first ad test

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <script src="Build/bubblecookweb.loader.js"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
+  <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
   <script src="payment.js" defer></script>
 
   <script>
