--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
       var meta = document.createElement('meta');
       meta.name = 'viewport';
-      meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+      meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=no';
       document.getElementsByTagName('head')[0].appendChild(meta);
       container.className = "unity-mobile";
       
