--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Unity WebGL Player | Cook Merge Bubbles</title>
-  <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+  <style>
+    body {
+      text-align: center; 
+      padding: 0; 
+      border: 0; 
+      margin: 0; 
+      overflow: hidden;
+    }
+    #unity-container {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: #231F20;
+    }
+    #unity-canvas {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
   <div id="unity-container">
