--- a/index.html
+++ b/index.html
@@ -3,34 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes" />
   <title>Unity WebGL Player | Cook Merge Bubbles</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
   <link rel="stylesheet" href="TemplateData/style.css">
-  <style>
-    body {
-      text-align: center; 
-      padding: 0; 
-      border: 0; 
-      margin: 0; 
-      overflow: hidden;
-    }
-    #unity-container {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background: #231F20;
-    }
-    #unity-canvas {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
 </head>
 <body>
   <div id="unity-container">
-    <canvas id="unity-canvas" tabindex="-1"></canvas>
+    <canvas id="unity-canvas" width=1080 height=1920 style="width: 100%; height: 100%;"></canvas>
     <div id="unity-loading-bar">
       <div id="unity-logo"></div>
       <div id="unity-progress-bar-empty">
@@ -94,13 +74,13 @@
       meta.name = 'viewport';
       meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
       document.getElementsByTagName('head')[0].appendChild(meta);
-      container.className = "unity-mobile";
       
-      canvas.style.width = window.innerWidth + 'px';
-      canvas.style.height = window.innerHeight + 'px';
-    } else {
+      var canvas = document.querySelector("#unity-canvas");
       canvas.style.width = "100%";
       canvas.style.height = "100%";
+      canvas.style.position = "fixed";
+
+      document.body.style.textAlign = "left";
     }
     
     loadingBar.style.display = "block";
@@ -146,6 +126,7 @@
       }).then((unityInstance) => {
         window.UNITY_INSTANCE = unityInstance;
         loadingBar.style.display = "none";
+        container.style.display = 'block';
         fullscreenButton.onclick = () => {
           unityInstance.SetFullscreen(1);
         };
