--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       }).then((unityInstance) => {
         window.UNITY_INSTANCE = unityInstance;
         loadingBar.style.display = "none";
-        container.style.display = 'block';
+        //container.style.display = 'block';
       }).catch((message) => {
         alert(message);
       });
