--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="unity-container">
-    <canvas id="unity-canvas" width=1080 height=1920 style="width: 100%; height: 100%;"></canvas>
+    <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
     <div id="unity-loading-bar">
       <div id="unity-logo"></div>
       <div id="unity-progress-bar-empty">
@@ -100,7 +100,7 @@
       }).then((unityInstance) => {
         window.UNITY_INSTANCE = unityInstance;
         loadingBar.style.display = "none";
-        //container.style.display = 'block';
+        container.style.display = 'block';
       }).catch((message) => {
         alert(message);
       });
