--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
   <title>Unity WebGL Player | Cook Merge Bubbles</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
   <link rel="stylesheet" href="TemplateData/style.css">
+  <link rel="stylesheet" href="TemplateData/loadingStyle.css">
+
 </head>
 <body>
+  <h1>Cooking in progress..</h1>
+  <div id="cooking">
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div id="area">
+      <div id="sides">
+        <div id="pan"></div>
+        <div id="handle"></div>
+      </div>
+      <div id="pancake">
+        <div id="pastry"></div>
+      </div>
+    </div>
+  </div>
+
   <div id="unity-container">
     <canvas id="unity-canvas" width=1080 height=1920 style="width: 100%; height: 100%;"></canvas>
     <div id="unity-loading-bar">
@@ -18,6 +38,7 @@
       </div>
     </div>
   </div>
+
   <script src="Build/bubblecookweb.loader.js"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
@@ -101,6 +122,10 @@
         window.UNITY_INSTANCE = unityInstance;
         loadingBar.style.display = "none";
         container.style.display = 'block';
+
+        document.querySelector("h1").style.display = "none";
+        document.querySelector("#cooking").style.display = "none";
+
       }).catch((message) => {
         alert(message);
       });
