--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>Cooking in progress..</h1>
-  <div id="cooking">
+  <div id="cooking" style="display: block">
     <div class="bubble"></div>
     <div class="bubble"></div>
     <div class="bubble"></div>
