--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
 
 </head>
 <body>
-  <h1>Cooking in progress..</h1>
-  <div id="cooking" style="display: block">
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div id="area">
-      <div id="sides">
-        <div id="pan"></div>
-        <div id="handle"></div>
-      </div>
-      <div id="pancake">
-        <div id="pastry"></div>
+  <div id = "loadcontainer">
+    <h1>Cooking in progress..</h1>
+    <div id="cooking" style="display: block">
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div id="area">
+        <div id="sides">
+          <div id="pan"></div>
+          <div id="handle"></div>
+        </div>
+        <div id="pancake">
+          <div id="pastry"></div>
+        </div>
       </div>
     </div>
   </div>
