another vibration test

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         loadingBar.style.display = "none";
         container.style.display = 'block';
 
-        document.querySelector("h1").textContent = "Preparing bubbles..."
+        document.querySelector("h1").textContent = "Finishing bubbles..."
       }).catch((message) => {
         alert(message);
       });
