--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         companyName: "DefaultCompany",
         productName: "Cook Merge Bubbles",
         productVersion: "1.0.3",
-        showBanner: unityShowBanner,
+        showBanner: false,
       };
 
     if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
