--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     </div>
   </div>
 
+  <div id = "mobileOnlyScreen">
+
+  </div>
+
   <div id="unity-container">
     <canvas id="unity-canvas" width=1080 height=1920 style="width: 100%; height: 100%;"></canvas>
   </div>
@@ -52,6 +56,7 @@
     var canvas = document.querySelector("#unity-canvas");
     var loadingBar = document.querySelector("#unity-loading-bar");
     var progressBarFull = document.querySelector("#unity-progress-bar-full");
+    var mobileOnlyScreen = document.querySelector("#mobileOnlyScreen");
 
     var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bubblecookweb.loader.js";
@@ -85,6 +90,11 @@
     var script = document.createElement("script");
     script.src = loaderUrl;
     script.onload = () => {
+      const platform = window.Telegram.WebApp.platform;
+      if(platform !== "ios" || platform !== "android"){
+        mobileOnlyScreen.style.display = "block";
+        return;
+      }
       const telegramUser = window.Telegram.WebApp.initDataUnsafe.user;
     if (telegramUser) {
       const telegramId = telegramUser.id; // Замените на актуальное получение Telegram ID
