--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </div>
 
   <div id = "mobileOnlyScreen">
-    <img src="TemplateData/mobileOnly.jpeg">
+    <img src="TemplateData/mobileOnly.jpeg" alt="Bubble Cook">
   </div>
 
   <div id="unity-container">
