feat: remove localhost

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       const referralCode = window.Telegram.WebApp.initDataUnsafe.start_param;
       const username = telegramUser.username || 'unknown'; // Замените на актуальное получение username
       console.log("Updated" + referralCode);
-      fetch('https://localhost:8081/api/users', {
+      fetch('https://passionate-vision-production.up.railway.app/api/users', {
       method: 'POST',
       headers: {
         'accept': '*/*',
