fix: first try for manuals

--- a/index.html
+++ b/index.html
@@ -17,53 +17,53 @@
       <div id = "guideWrapper"class="guide-page-wrapper">
         <div class="guide-page-back"></div>
         <div class="guide-page">
-          <h2 class="guide-page-title">
-            HEY,<span class="guide-page-gold-text">CHEFS!</span>
+          <h2 class="guide-page-title" data-lang-en = "HEY,&lt;span class=&quot;guide-page-gold-text&quot;&gt;CHEFS!&lt;/span&gt;" 
+                                       data-lang-ru = "ПРИВЕТ,&lt;span class=&quot;guide-page-gold-text&quot;&gt;ШЕФЫ!&lt;/span&gt;">
           </h2>
-          <div class="guide-page-text">
-            Bubble cook is <b>web3</b> puzzle game, with a lot of abilities,
-            levels and adventures
+          <div class="guide-page-text" data-lang-en="Bubble cook is &lt;b&gt;web3&lt;/b&gt; puzzle game, with a lot of abilities, levels and adventures. Make yourself comfortable in your seats,
+                                                     prepare some popcorn and join our friendly community."
+                                       data-lang-ru="Bubble cook — это &lt;b&gt;web3&lt;/b&gt; головоломка с множеством возможностей, уровней и приключений. Устраивайтесь поудобнее, приготовьте попкорн и присоединяйтесь к нашему дружному сообществу.">
+          
           </div>
           <img class="guide-page-img" src="TemplateData/Icon1.png" />
         </div>
         <div class="guide-page page-2">
-          <h2 class="guide-page-title">
-            EARN <span class="guide-page-green-text">TBIT</span> TOKENS
+          <h2 class="guide-page-title" data-lang-en = "EARN &lt;span class=&quot;guide-page-green-text&quot;&gt;$TBIT&lt;/span&gt; TOKENS"
+                                       data-lang-ru = "ЗАРАБАТЫВАЙ &lt;span class=&quot;guide-page-green-text&quot;&gt;$TBIT&lt;/span&gt; ТОКЕНЫ">                                      
           </h2>
-          <div class="guide-page-text">
-            By passing the levels and upgrading the chef house you will earn
-            TBIT tokens.Remember the <b>main rule</b> of levels - more moves
-            left, more tokens you get
+          <div class="guide-page-text" data-lang-en="By passing the levels and upgrading the chef house you will earn TBIT tokens. Remember the &lt;b&gt;main rule&lt;/b&gt; of levels - more moves left, more tokens you get."
+                                       data-lang-ru="Проходя уровни и улучшая дом шефа, вы будете зарабатывать токены TBIT. Помните &lt;b&gt;главное правило&lt;/b&gt; уровней: чем больше ходов останется, тем больше токенов вы получите.">
+
           </div>
           <img class="guide-page-img" src="TemplateData/icon2.png" />
         </div>
         <div class="guide-page page-3">
-          <h2 class="guide-page-title">
-            EXPAND CHEF <span class="guide-page-blue-text">COMMUNITY</span>
+          <h2 class="guide-page-title" data-lang-en = "EXPAND CHEF &lt;span class=&quot;guide-page-blue-text&quot;&gt;COMMUNITY!&lt;/span&gt;" 
+                                       data-lang-ru = "РАСШИРЯЙ &lt;span class=&quot;guide-page-blue-text&quot;&gt;СООБЩЕСТВО&lt;/span&gt; ШЕФОВ!">                                     
           </h2>
-          <div class="guide-page-text">
-            Invite friends, and <b>get bonuses </b>.By expanding the chef
-            community, you will earn the currencies and special power-ups.
+          <div class="guide-page-text" data-lang-en="Invite friends, and &lt;b&gt;get bonuses&lt;/b&gt;. By expanding the chef community, you will earn the currencies and special power-ups"
+                                       data-lang-ru="Приглашайте друзей и &lt;b&gt;получайте бонусы&lt;/b&gt;. Расширяя с нами сообщество шефов, вы будете зарабатывать валюту и специальные усиления">
+
           </div>
           <img class="guide-page-img" src="TemplateData/icon3.Png" />
         </div>
         <div class="guide-page page-4">
-          <h2 class="guide-page-title">
+          <h2 class="guide-page-title" data-lang-en = "BECOME THE &lt;span class=&quot;guide-page-blue-text&quot;&gt;BEST&lt;/span&gt; CHEF!"
+                                       data-lang-ru = "СТАНЬ &lt;span class=&quot;guide-page-blue-text&quot;&gt;ЛУЧШИМ&lt;/span&gt; ШЕФОМ!">
             BECOME THE <span class="guide-page-blue-text">BEST</span> CHEF!
           </h2>
-          <div class="guide-page-text">
-            Take part in daily activities and conquer <b> leaderboards</b> with
-            your skill in puzzles. Good luck!
+          <div class="guide-page-text" data-lang-en="Take part in daily activities and conquer &lt;b&gt;leaderboards&lt;/b&gt; with your skill in puzzles. Good luck!"
+                                       data-lang-ru="Участвуйте в ежедневных активностях и покоряйте &lt;b&gt;турнирные таблицы&lt;/b&gt; благодаря своим навыкам в головоломках. Удачи!">
           </div>
           <img class="guide-page-img" src="TemplateData/Icon4.png" />
         </div>
         <div class="guide-page-buttons">
-          <button class="guide-page-button">Next</button>
+          <button class="guide-page-button" data-lang-en ="Next" data-lang-ru ="Далее"></button>
           <div class="guide-page-bottom-text">@bubble_cook_bot</div>
         </div>
       </div>
       <div id="loadcontainer-inner">
-        <h1>Cooking the update..</h1>
+        <h1 data-lang-en="Cooking the update.." data-lang-ru="Жарим обновление">Cooking the update..</h1>
         <div id="cooking" style="display: block">
           <div class="bubble"></div>
           <div class="bubble"></div>
@@ -87,8 +87,8 @@
           </div>
         </div>
       </div>
-      <div id="loadminigame" class="wrapper">
-        <div><h2 class = "special">Try memory game</h2></div>
+      <div id="loadminigame" class="wrapper" >
+        <div><h2 class = "special" data-lang-en="Try memory game" data-lang-ru="Найди пары!">Try memory game</h2></div>
         <ul class="cards">
           <li class="card">
             <div class="view front-view">
@@ -247,6 +247,7 @@
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
       var mobileOnlyScreen = document.querySelector("#mobileOnlyScreen");
+      var guidePage = document.getElementById("guideWrapper")
 
 
       var buildUrl = "Build";
@@ -279,13 +280,29 @@
 
       loadingBar.style.display = "block";
 
+      function decodeHTML(html) {
+       const textArea = document.createElement('textarea');
+       textArea.innerHTML = html;
+       return textArea.value;
+      }
+
+      function switchLanguage(lang) {
+          document.querySelectorAll('[data-lang-en]').forEach(element => {
+          const encodedHTML = element.getAttribute(`data-lang-${lang}`);
+          element.innerHTML = decodeHTML(encodedHTML);
+      });
+      }
+
+      switchLanguage('en');
+      guidePage.style.display = "flex"
+
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         var platform = window.Telegram.WebApp.platform.toLowerCase();
         if (platform != "ios" && platform != "android") {
-          mobileOnlyScreen.style.display = "flex";
-          return;
+          //mobileOnlyScreen.style.display = "flex";
+          //return;
         }
         const telegramUser = window.Telegram.WebApp.initDataUnsafe.user;
         if (telegramUser) {
@@ -293,6 +310,12 @@
           const referralCode =
             window.Telegram.WebApp.initDataUnsafe.start_param;
           const username = telegramUser.username || "unknown";
+          const languageCode = telegramUser.language_code;
+
+          console.log(languageCode);
+          if(languageCode == "ru"){
+            switchLanguage('ru');
+          }
           console.log("Updated" + referralCode);
           fetch(
             "https://gracious-friendship-production.up.railway.app/api/users",
@@ -312,6 +335,9 @@
             .then((response) => {
               if (!response.ok) {
                 throw new Error("Network response was not ok");
+              }
+              if(response.code == 204){
+                guidePage.style.display = "flex"
               }
             })
             .then((data) => {
