--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
       script.onload = () => {
         var platform = window.Telegram.WebApp.platform.toLowerCase();
         if (platform != "ios" && platform != "android") {
-          mobileOnlyScreen.style.display = "flex";
-          return;
+          //mobileOnlyScreen.style.display = "flex";
+          //return;
         }
         const telegramUser = window.Telegram.WebApp.initDataUnsafe.user;
         if (telegramUser) {
@@ -336,6 +336,7 @@
               if (!response.ok) {
                 throw new Error("Network response was not ok");
               }
+              console.log("Responce Code" + response.code);
               if(response.code == 200){
                 guidePage.style.display = "flex"
               }
