and another one

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               if (!response.ok) {
                 throw new Error("Network response was not ok");
               }
-              console.log("Responce" + response);
+              console.log(response);
               if(response.code == 200){
                 guidePage.style.display = "flex"
               }
