Another finishing bubbles

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           .then((unityInstance) => {
             window.UNITY_INSTANCE = unityInstance;
             container.style.display = "block";
-            if(languageCode == "ru"){
+            if(window.Telegram.WebApp.initDataUnsafe.user.language_code == "ru"){
               document.querySelector("h1").textContent = "Заканчиваем готовку";
             }
             else{
