feat: full screen

--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
       var mobileOnlyScreen = document.querySelector("#mobileOnlyScreen");
       var guidePage = document.getElementById("guideWrapper")
 
+      window.Telegram.WebApp.requestFullscreen();
+
 
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bubblecookweb.loader.js";
