--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       var mobileOnlyScreen = document.querySelector("#mobileOnlyScreen");
       var guidePage = document.getElementById("guideWrapper")
 
-      //window.Telegram.WebApp.requestFullscreen();
+      window.Telegram.WebApp.disableVerticalSwipes();
 
 
       var buildUrl = "Build";
